--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.22.3",
     "sort-by": "^0.0.2",
     "swiper": "^11.1.10"
