--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.22.3",
+    "react-tabs": "^6.0.2",
     "sort-by": "^0.0.2",
     "swiper": "^11.1.10"
   },
