--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
     "react-rating": "^2.0.5",
