--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.22.3",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^11.0.3",
     "sort-by": "^0.0.2",
     "swiper": "^11.1.10"
   },
