--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.66.9",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
