--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.22.3",
     "react-tabs": "^6.0.2",
