--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-tabs": "^6.0.2",
     "react-toastify": "^11.0.3",
     "sort-by": "^0.0.2",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.1.10"
   },
   "devDependencies": {
